--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -4,11 +4,10 @@
   &.is-modal {
     // equals is-bottom for mobile
     bottom: 0;
-    top: auto;
-    height: 90%;
+    top: 0;
+    height: 100%;
     width: 100%;
     border-radius: 8px 8px 0 0;
-    transform: translateY(100%);
 
     @include media-breakpoint-up(sm) {
       // centered modal on larger screens
